--- a/personal_web/contactus.html
+++ b/personal_web/contactus.html
@@ -31,7 +31,7 @@
         <h1 class="front2">Contact Us</h1>
       </section>
       <h1>
-        Email or call me with any questions or informations about the website.
+        Email or call me with any questions or information about the website.
       </h1>
       <h1>Email: afleming9944@gmail.com</h1>
       <h1>Phone: 623-302-8350</h1>
