--- a/personal_web/etc.html
+++ b/personal_web/etc.html
@@ -32,7 +32,7 @@
       </header>
       <section class="front">
         <img class="front1" src="images2/buy2.jpg" alt="front photo" />
-        <h1 class="front2">Buy</h1>
+        <h1 class="front2">Etc.</h1>
       </section>
 
       <section class="frontbuy">
@@ -51,58 +51,48 @@
           <input type="checkbox" name="etc" value="" /><br />
         </form>
         <div class="photobuy">
-          <img class="photosbuy" src="images2/deflep.jpg" alt="shirt" />
+          <img class="photosbuy" src="images2/" alt="shirt" />
           <p class="textbuy">Vintage Def Lepord Band T-shirt. Unisex, Medium</p>
           <p class="textbuy2">$3.24</p>
         </div>
         <div class="photobuy2">
-          <img class="photosbuy" src="images2/jeans.jpg" alt="jeans1" />
-          <p class="textbuy">
-            American Eagle: Classic Bell Bottom Jeans. Womens, Small
-          </p>
-          <p class="textbuy2">$4.79</p>
+          <img class="photosbuy" src="images2/" alt="jeans1" />
+          <p class="textbuy">H&M Premium Cotton Flannel. Mens, Large</p>
+          <p class="textbuy2">$4.50</p>
         </div>
         <div class="photobuy3">
-          <img class="photosbuy" src="images2/jeans2.jpg" alt="jeans2" />
-          <p class="textbuy">Crazy Stylish Blue/Yellow Jeans. Mens, Medium</p>
-          <p class="textbuy2">$4.59</p>
+          <img class="photosbuy" src="images2/" alt="jeans2" />
+          <p class="textbuy">Simple/Soft Grey Sweater. Womens, Medium</p>
+          <p class="textbuy2">$6.59</p>
         </div>
         <div class="photobuy4">
-          <img class="photosbuy" src="images2/coat1.png" alt="coat" />
-          <p class="textbuy">
-            Tan Premium Cotton Coat, Fur Lined. Unisex, Medium
-          </p>
-          <p class="textbuy2">$7.79</p>
+          <img class="photosbuy" src="images2/" alt="coat" />
+          <p class="textbuy">Black Pantera Shirt. Unisex, Large</p>
+          <p class="textbuy2">$2.34</p>
         </div>
         <div class="photobuy5">
-          <img class="photosbuy" src="images2/shoes1.jpg" alt="shoes" />
-          <p class="textbuy">
-            Funny Democrat/Rebublican Party Tom's. Womens, Size 7
-          </p>
+          <img class="photosbuy" src="images2/" alt="shoes" />
+          <p class="textbuy">Light Grey Fishing Shirt. Mens, X-Large</p>
           <p class="textbuy2">$6.79</p>
         </div>
         <div class="photobuy6">
-          <img class="photosbuy" src="images2/shoes3.jpg" alt="other shoes" />
-          <p class="textbuy">Yellow Sunflower Vans. Womens, Size 10</p>
-          <p class="textbuy2">$8.65</p>
+          <img class="photosbuy" src="images2/" alt="other shoes" />
+          <p class="textbuy">2 Pac Shirt. Unisex, Small</p>
+          <p class="textbuy2">$4.65</p>
         </div>
         <div class="photobuy7">
-          <img
-            class="photosbuy"
-            src="images2/sunglasses.jpg"
-            alt="sunglasses"
-          />
-          <p class="textbuy">Tinted Sunglasses, Vogue. Unisex</p>
-          <p class="textbuy2">$2.45</p>
+          <img class="photosbuy" src="images2/" alt="sunglasses" />
+          <p class="textbuy">Cool To Be Kind Tee. Unisex, Medium</p>
+          <p class="textbuy2">$1.45</p>
         </div>
         <div class="photobuy8">
-          <img class="photosbuy" src="images2/trunks.jpg" alt="swim trunks" />
-          <p class="textbuy">Blue Splash Swim Trunks. Mens, Medium</p>
-          <p class="textbuy2">$3.89</p>
+          <img class="photosbuy" src="images2/" alt="swim trunks" />
+          <p class="textbuy">Spotted Black/White Blouse. Womens, Medium</p>
+          <p class="textbuy2">$3.30</p>
         </div>
         <div class="photobuy9">
-          <img class="photosbuy" src="images2/dress.png" alt="dress" />
-          <p class="textbuy">Blue Flower Sun Dress. Womens, Medium</p>
+          <img class="photosbuy" src="images2/" alt="dress" />
+          <p class="textbuy">Peach Color Sweatshirt. Womens, Medium</p>
           <p class="textbuy2">$5.78</p>
         </div>
       </section>
