--- a/personal_web/home.html
+++ b/personal_web/home.html
@@ -53,29 +53,29 @@
         <div>
           <img class="photo3" src="images2/rsz_shoes (1).png" alt="shoes" />
           <p class="text3">Nike SB Dunks, Tan. Mens, Size 10</p>
-          <p class="text7">$10.45</p>
+          <p class="text6">$10.45</p>
         </div>
         <div>
           <img class="photo4" src="images2/coat.jpg" alt="coat" />
           <p class="text4">Fur Coated Jacket. Womens, Medium</p>
-          <p class="text8">$8.79</p>
+          <p class="text6">$8.79</p>
         </div>
       </section>
       <h1 class="featureditems1">Shop Top Catagories</h1>
       <section class="catag">
-        <a href="buy.html"
+        <a href="shirts.html"
           ><img class="photos1" src="images2/tshirt.png" alt="tshirt"
         /></a>
-        <a href="buy.html"
+        <a href="pants.html"
           ><img class="photos2" src="images2/trousers.png" alt="pants"
         /></a>
-        <a href="buy.html"
+        <a href="shoes.html"
           ><img class="photos3" src="images2/sneakers.png" alt="shoes"
         /></a>
-        <a href="buy.html"
+        <a href="coats.html"
           ><img class="photos4" src="images2/lab-coat.png" alt="coat"
         /></a>
-        <a href="buy.html"
+        <a href="etc.html"
           ><img class="photos5" src="images2/clothes.png" alt="etc."
         /></a>
       </section>
