--- a/personal_web/pants.html
+++ b/personal_web/pants.html
@@ -32,7 +32,7 @@
       </header>
       <section class="front">
         <img class="front1" src="images2/buy2.jpg" alt="front photo" />
-        <h1 class="front2">Buy</h1>
+        <h1 class="front2">Pants</h1>
       </section>
 
       <section class="frontbuy">
@@ -51,16 +51,14 @@
           <input type="checkbox" name="etc" value="" /><br />
         </form>
         <div class="photobuy">
-          <img class="photosbuy" src="images2/deflep.jpg" alt="shirt" />
-          <p class="textbuy">Vintage Def Lepord Band T-shirt. Unisex, Medium</p>
-          <p class="textbuy2">$3.24</p>
+          <img class="photosbuy" src="images2/pants1.png" alt="pants" />
+          <p class="textbuy">All Leather Black Pants. Womens, Size 5</p>
+          <p class="textbuy2">$7.24</p>
         </div>
         <div class="photobuy2">
-          <img class="photosbuy" src="images2/jeans.jpg" alt="jeans1" />
-          <p class="textbuy">
-            American Eagle: Classic Bell Bottom Jeans. Womens, Small
-          </p>
-          <p class="textbuy2">$4.79</p>
+          <img class="photosbuy" src="images2/rsz_pants (1).png" alt="jeans1" />
+          <p class="textbuy">Vintage 1985 Cargo Style Pants. Mens, Medium</p>
+          <p class="textbuy2">$5.99</p>
         </div>
         <div class="photobuy3">
           <img class="photosbuy" src="images2/jeans2.jpg" alt="jeans2" />
@@ -68,42 +66,36 @@
           <p class="textbuy2">$4.59</p>
         </div>
         <div class="photobuy4">
-          <img class="photosbuy" src="images2/coat1.png" alt="coat" />
+          <img class="photosbuy" src="images2/pants2.png" alt="pants" />
           <p class="textbuy">
-            Tan Premium Cotton Coat, Fur Lined. Unisex, Medium
+            Custom Cow/Colorful Print Jeggings. Womens, Large
           </p>
-          <p class="textbuy2">$7.79</p>
+          <p class="textbuy2">$5.76</p>
         </div>
         <div class="photobuy5">
-          <img class="photosbuy" src="images2/shoes1.jpg" alt="shoes" />
-          <p class="textbuy">
-            Funny Democrat/Rebublican Party Tom's. Womens, Size 7
-          </p>
-          <p class="textbuy2">$6.79</p>
+          <img class="photosbuy" src="images2/pants3.png" alt="pants" />
+          <p class="textbuy">Black Snow Pants. Mens, Large</p>
+          <p class="textbuy2">$10.98</p>
         </div>
         <div class="photobuy6">
-          <img class="photosbuy" src="images2/shoes3.jpg" alt="other shoes" />
-          <p class="textbuy">Yellow Sunflower Vans. Womens, Size 10</p>
-          <p class="textbuy2">$8.65</p>
+          <img class="photosbuy" src="images2/pants4.png" alt="pants" />
+          <p class="textbuy">Flannel Style Jeans. Womens, Small</p>
+          <p class="textbuy2">$6.65</p>
         </div>
         <div class="photobuy7">
-          <img
-            class="photosbuy"
-            src="images2/sunglasses.jpg"
-            alt="sunglasses"
-          />
-          <p class="textbuy">Tinted Sunglasses, Vogue. Unisex</p>
-          <p class="textbuy2">$2.45</p>
+          <img class="photosbuy" src="images2/pants5.png" alt="pants" />
+          <p class="textbuy">Classic Blue Jeans. Unisex, Medium</p>
+          <p class="textbuy2">$3.45</p>
         </div>
         <div class="photobuy8">
-          <img class="photosbuy" src="images2/trunks.jpg" alt="swim trunks" />
-          <p class="textbuy">Blue Splash Swim Trunks. Mens, Medium</p>
-          <p class="textbuy2">$3.89</p>
+          <img class="photosbuy" src="images2/pants7.png" alt="pants" />
+          <p class="textbuy">Custom Fabric Pajama Bottoms. Mens, Women</p>
+          <p class="textbuy2">$2.89</p>
         </div>
         <div class="photobuy9">
-          <img class="photosbuy" src="images2/dress.png" alt="dress" />
-          <p class="textbuy">Blue Flower Sun Dress. Womens, Medium</p>
-          <p class="textbuy2">$5.78</p>
+          <img class="photosbuy" src="images2/pants6.png" alt="pants" />
+          <p class="textbuy">Blue Jeans Short Shorts. Womens, Small</p>
+          <p class="textbuy2">$1.78</p>
         </div>
       </section>
       <footer>
