--- a/personal_web/shoes.html
+++ b/personal_web/shoes.html
@@ -32,7 +32,7 @@
       </header>
       <section class="front">
         <img class="front1" src="images2/buy2.jpg" alt="front photo" />
-        <h1 class="front2">Buy</h1>
+        <h1 class="front2">Shoes</h1>
       </section>
 
       <section class="frontbuy">
@@ -51,28 +51,24 @@
           <input type="checkbox" name="etc" value="" /><br />
         </form>
         <div class="photobuy">
-          <img class="photosbuy" src="images2/deflep.jpg" alt="shirt" />
-          <p class="textbuy">Vintage Def Lepord Band T-shirt. Unisex, Medium</p>
-          <p class="textbuy2">$3.24</p>
+          <img class="photosbuy" src="images2/rsz_shoes (1).png" alt="shoes" />
+          <p class="textbuy">Nike SB Dunks, Tan. Mens, Size 10</p>
+          <p class="textbuy2">$10.45</p>
         </div>
         <div class="photobuy2">
-          <img class="photosbuy" src="images2/jeans.jpg" alt="jeans1" />
-          <p class="textbuy">
-            American Eagle: Classic Bell Bottom Jeans. Womens, Small
-          </p>
-          <p class="textbuy2">$4.79</p>
+          <img class="photosbuy" src="images2/shoes4.png" alt="shoes" />
+          <p class="textbuy">Thomas Jefferson 69's. Mens, Size 9</p>
+          <p class="textbuy2">$12.78</p>
         </div>
         <div class="photobuy3">
-          <img class="photosbuy" src="images2/jeans2.jpg" alt="jeans2" />
-          <p class="textbuy">Crazy Stylish Blue/Yellow Jeans. Mens, Medium</p>
-          <p class="textbuy2">$4.59</p>
+          <img class="photosbuy" src="images2/shoes5.png" alt="shoes" />
+          <p class="textbuy">2 Inch Heal Boots. Womens, Size 10</p>
+          <p class="textbuy2">$8.01</p>
         </div>
         <div class="photobuy4">
-          <img class="photosbuy" src="images2/coat1.png" alt="coat" />
-          <p class="textbuy">
-            Tan Premium Cotton Coat, Fur Lined. Unisex, Medium
-          </p>
-          <p class="textbuy2">$7.79</p>
+          <img class="photosbuy" src="images2/shoes6.png" alt="shoes" />
+          <p class="textbuy">Red and Grey Jordan 1 High. Mens, Size 7</p>
+          <p class="textbuy2">$2.34</p>
         </div>
         <div class="photobuy5">
           <img class="photosbuy" src="images2/shoes1.jpg" alt="shoes" />
@@ -87,23 +83,19 @@
           <p class="textbuy2">$8.65</p>
         </div>
         <div class="photobuy7">
-          <img
-            class="photosbuy"
-            src="images2/sunglasses.jpg"
-            alt="sunglasses"
-          />
-          <p class="textbuy">Tinted Sunglasses, Vogue. Unisex</p>
-          <p class="textbuy2">$2.45</p>
+          <img class="photosbuy" src="images2/shoes7.png" alt="shoes" />
+          <p class="textbuy">Jordan 4 & Jordan 5. Mens, Size 11</p>
+          <p class="textbuy2">$20.45</p>
         </div>
         <div class="photobuy8">
-          <img class="photosbuy" src="images2/trunks.jpg" alt="swim trunks" />
-          <p class="textbuy">Blue Splash Swim Trunks. Mens, Medium</p>
-          <p class="textbuy2">$3.89</p>
+          <img class="photosbuy" src="images2/shoes8.png" alt="shoes" />
+          <p class="textbuy">Kate Spade High Heels. Womens, Size 5</p>
+          <p class="textbuy2">$11.30</p>
         </div>
         <div class="photobuy9">
-          <img class="photosbuy" src="images2/dress.png" alt="dress" />
-          <p class="textbuy">Blue Flower Sun Dress. Womens, Medium</p>
-          <p class="textbuy2">$5.78</p>
+          <img class="photosbuy" src="images2/shoes9.png" alt="shoes" />
+          <p class="textbuy">Old Navy Beach Sandals. Unisex Size 6</p>
+          <p class="textbuy2">$.78</p>
         </div>
       </section>
       <footer>
