--- a/personal_web/coats.html
+++ b/personal_web/coats.html
@@ -61,9 +61,9 @@
           <p class="textbuy2">$4.50</p>
         </div>
         <div class="photobuy3">
-          <img class="photosbuy" src="images2/coats10.png alt="coats" />
-          <p class="textbuy">Simple/Soft Grey Sweater. Womens, Medium</p>
-          <p class="textbuy2">$6.59</p>
+          <img class="photosbuy" src="images2/coats10.png" alt="coats" />
+          <p class="textbuy">H&M Premium Cotton Flannel. Mens, Large</p>
+          <p class="textbuy2">$4.50</p>
         </div>
         <div class="photobuy4">
           <img class="photosbuy" src="images2/coat.jpg" alt="coat" />
