--- a/personal_web/coats.html
+++ b/personal_web/coats.html
@@ -52,40 +52,38 @@
         </form>
         <div class="photobuy">
           <img class="photosbuy" src="images2/coats7.png" alt="coats" />
-          <p class="textbuy">Vintage Def Lepord Band T-shirt. Unisex, Medium</p>
+          <p class="textbuy">Plain Black Zip-Up Hoodie. Unisex, Medium</p>
           <p class="textbuy2">$3.24</p>
         </div>
         <div class="photobuy2">
           <img class="photosbuy" src="images2/coats1.png" alt="coats" />
-          <p class="textbuy">H&M Premium Cotton Flannel. Mens, Large</p>
-          <p class="textbuy2">$4.50</p>
+          <p class="textbuy">H&M Premium Polyester Coat. Mens, Large</p>
+          <p class="textbuy2">$9.50</p>
         </div>
         <div class="photobuy3">
           <img class="photosbuy" src="images2/coats10.png" alt="coats" />
-          <p class="textbuy">H&M Premium Cotton Flannel. Mens, Large</p>
-          <p class="textbuy2">$4.50</p>
+          <p class="textbuy">Tan and Cream Snow Coat. Womens, Small</p>
+          <p class="textbuy2">$12.67</p>
         </div>
         <div class="photobuy4">
           <img class="photosbuy" src="images2/coat.jpg" alt="coat" />
-          <p class="textbuy">
-            Tan Premium Cotton Coat, Fur Lined. Unisex, Medium
-          </p>
-          <p class="textbuy2">$7.79</p>
+          <p class="textbuy">Fur Coated Jacket. Womens, Medium</p>
+          <p class="textbuy2">$8.79</p>
         </div>
         <div class="photobuy5">
           <img class="photosbuy" src="images2/coats6.png" alt="coats" />
-          <p class="textbuy">Light Grey Fishing Shirt. Mens, X-Large</p>
+          <p class="textbuy">White Nike Pull-Over. Unisex, Large</p>
           <p class="textbuy2">$6.79</p>
         </div>
         <div class="photobuy6">
           <img class="photosbuy" src="images2/coats4.png" alt="coats" />
-          <p class="textbuy">2 Pac Shirt. Unisex, Small</p>
+          <p class="textbuy">Premium Fox-Fur Over Coat. Womens, Womens</p>
           <p class="textbuy2">$4.65</p>
         </div>
         <div class="photobuy7">
           <img class="photosbuy" src="images2/coats3.png" alt="coats" />
-          <p class="textbuy">Cool To Be Kind Tee. Unisex, Medium</p>
-          <p class="textbuy2">$1.45</p>
+          <p class="textbuy">Tan Button-Up Leather Jacket. Unisex, Medium</p>
+          <p class="textbuy2">$7.45</p>
         </div>
         <div class="photobuy8">
           <img class="photosbuy" src="images2/coat1.png" alt="coats" />
@@ -96,8 +94,8 @@
         </div>
         <div class="photobuy9">
           <img class="photosbuy" src="images2/coats5.png" alt="coats" />
-          <p class="textbuy">Peach Color Sweatshirt. Womens, Medium</p>
-          <p class="textbuy2">$5.78</p>
+          <p class="textbuy">Fun Winter Design Snow Jacket. Womens, Medium</p>
+          <p class="textbuy2">$9.78</p>
         </div>
       </section>
       <footer>
