--- a/personal_web/etc.html
+++ b/personal_web/etc.html
@@ -51,48 +51,52 @@
           <input type="checkbox" name="etc" value="" /><br />
         </form>
         <div class="photobuy">
-          <img class="photosbuy" src="images2/" alt="shirt" />
-          <p class="textbuy">Vintage Def Lepord Band T-shirt. Unisex, Medium</p>
-          <p class="textbuy2">$3.24</p>
+          <img class="photosbuy" src="images2/hat.png" alt="hat" />
+          <p class="textbuy">Red Skaters Hat. Unisex</p>
+          <p class="textbuy2">$1.24</p>
         </div>
         <div class="photobuy2">
-          <img class="photosbuy" src="images2/" alt="jeans1" />
-          <p class="textbuy">H&M Premium Cotton Flannel. Mens, Large</p>
-          <p class="textbuy2">$4.50</p>
+          <img class="photosbuy" src="images2/gloves.png" alt="gloves" />
+          <p class="textbuy">Heavy Duty Work Gloves. Mens, Large</p>
+          <p class="textbuy2">$4.59</p>
         </div>
         <div class="photobuy3">
-          <img class="photosbuy" src="images2/" alt="jeans2" />
-          <p class="textbuy">Simple/Soft Grey Sweater. Womens, Medium</p>
-          <p class="textbuy2">$6.59</p>
+          <img class="photosbuy" src="images2/dress2.png" alt="dress" />
+          <p class="textbuy">Black Floral Dress. Womens, Medium</p>
+          <p class="textbuy2">$4.59</p>
         </div>
         <div class="photobuy4">
-          <img class="photosbuy" src="images2/" alt="coat" />
-          <p class="textbuy">Black Pantera Shirt. Unisex, Large</p>
-          <p class="textbuy2">$2.34</p>
+          <img class="photosbuy" src="images2/sunglasses.png" alt="glasses" />
+          <p class="textbuy">Vintage Aviator Glasses. Mens</p>
+          <p class="textbuy2">$1.34</p>
         </div>
         <div class="photobuy5">
-          <img class="photosbuy" src="images2/" alt="shoes" />
-          <p class="textbuy">Light Grey Fishing Shirt. Mens, X-Large</p>
-          <p class="textbuy2">$6.79</p>
+          <img class="photosbuy" src="images2/swim2.png" alt="shoes" />
+          <p class="textbuy">Colorful One-Piece Swim Suit. Womens, Small</p>
+          <p class="textbuy2">$4.79</p>
         </div>
         <div class="photobuy6">
-          <img class="photosbuy" src="images2/" alt="other shoes" />
-          <p class="textbuy">2 Pac Shirt. Unisex, Small</p>
-          <p class="textbuy2">$4.65</p>
+          <img class="photosbuy" src="images2/socks.png" alt="other shoes" />
+          <p class="textbuy">Green Shin High Socks. Unisex</p>
+          <p class="textbuy2">$.65</p>
         </div>
         <div class="photobuy7">
-          <img class="photosbuy" src="images2/" alt="sunglasses" />
-          <p class="textbuy">Cool To Be Kind Tee. Unisex, Medium</p>
-          <p class="textbuy2">$1.45</p>
+          <img
+            class="photosbuy"
+            src="images2/sunglasses.jpg"
+            alt="sunglasses"
+          />
+          <p class="textbuy">Tinted Sunglasses, Vogue. Unisex</p>
+          <p class="textbuy2">$2.45</p>
         </div>
         <div class="photobuy8">
-          <img class="photosbuy" src="images2/" alt="swim trunks" />
-          <p class="textbuy">Spotted Black/White Blouse. Womens, Medium</p>
-          <p class="textbuy2">$3.30</p>
+          <img class="photosbuy" src="images2/trunks.jpg" alt="swim trunks" />
+          <p class="textbuy">Blue Splash Swim Trunks. Mens, Medium</p>
+          <p class="textbuy2">$3.89</p>
         </div>
         <div class="photobuy9">
-          <img class="photosbuy" src="images2/" alt="dress" />
-          <p class="textbuy">Peach Color Sweatshirt. Womens, Medium</p>
+          <img class="photosbuy" src="images2/dress.png" alt="dress" />
+          <p class="textbuy">Blue Flower Sun Dress. Womens, Medium</p>
           <p class="textbuy2">$5.78</p>
         </div>
       </section>
