--- a/personal_web/sell.html
+++ b/personal_web/sell.html
@@ -34,55 +34,54 @@
         <img class="front1" src="images2/sell2.jpg" alt="sell" />
         <h1 class="front2">Sell</h1>
       </section>
-      <section>
-        <h1>Methods To Sell</h1>
+      <h1 class="methods">Methods To Sell</h1>
+      <section class="to_sell">
+        <h2 class="to_sell1">Store Credit</h2>
+        <h2 class="to_sell2">Cash</h2>
+        <h2 class="to_sell3">Donate</h2>
       </section>
       <section>
-        <h2>Store Credit</h2>
-        <h2>Cash</h2>
-        <h2>Donate</h2>
+        <h3 class="facility">Facility Drop Off Hours</h3>
+        <section class="facility1">
+          <p class="li1">Monday: 7am-9pm</p>
+          <p class="li2">Tuesday: 7am-9pm</p>
+          <p class="li3">Wednesday: 9am-8pm</p>
+          <p class="li4">Thursday: 7am-9pm</p>
+          <p class="li5">Friday: 9am-9pm</p>
+          <p class="li6">Saturday: 10am-4pm</p>
+          <p class="li7">Sunday: Closed</p>
+          <p class="li8">Holidays: Closed</p>
+        </section>
+      </section>
+      <section class="whatsell1">
+        <h3 class="whatsell">What Not To Sell</h3>
+        <img class="whatsell2" src="images2/nomoney.jpg" alt="no money" />
+      </section>
+      <p class="whatsell3">
+        Our facility does not accept toys of any kind or furniture type
+        products. We only accept clothing brands and items. Anything that can be
+        considered wearbale. Do not bring worn or broken material as our workers
+        will not give you back money. If you would like to get rid of junk that
+        you don't think will sell, we do have a dump that we can transport it
+        too.
+      </p>
+      <section class="whatsell1">
+        <h3 class="whatsell">What To Sell</h3>
+        <img class="whatsell2" src="images2/send.jpg" alt="money" />
+      </section>
+      <p class="whatsell3">
+        We will take most if not all clothing items that is worn but in a
+        considerable condition. Items can be mailed in and we will asses the
+        quality of the clothing and if it is determined to not be sellable it
+        will be discarded or sent back at your request.
+      </p>
+      <section class="whatsell1">
+        <h1 class="shipping">Free Shipping!!!</h1>
+        <img class="whatsell4" src="images2/shipping.jpg" alt="shipping" />
       </section>
       <section>
-        <h3>Facility Drop Off Hours</h3>
-        <ul>
-          <li>Monday: 7am-9pm</li>
-          <li>Tuesday: 7am-9pm</li>
-          <li>Wednesday: 9am-8pm</li>
-          <li>Thursday: 7am-9pm</li>
-          <li>Friday: 9am-9pm</li>
-          <li>Saturday: 10am-4pm</li>
-          <li>Sunday: Closed</li>
-          <li>Holidays: Closed</li>
-        </ul>
-      </section>
-      <section>
-        <h2>What Not To Sell</h2>
-        <img src="images2/nomoney.jpg" alt="no money" />
-        <p>
-          Our facility does not accept toys of any kind or furniture type
-          products. We only accept clothing brands and items. Anything that can
-          be considered wearbale. Do not bring worn or broken material as our
-          workers will not give you back money. If you would like to get rid of
-          junk that you don't think will sell, we do have a dump that we can
-          transport it too.
-        </p>
-        <h2>What To Sell</h2>
-        <img src="images2/send.jpg" alt="money" />
-        <p>
-          We will take most if not all clothing items that is worn but in a
-          considerable condition. Items can be mailed in and we will asses the
-          quality of the clothing and if it is determined to not be sellable it
-          will be discarded or sent back at your request.
-        </p>
-      </section>
-      <section>
-        <h1>Free Shipping!!!</h1>
-        <img src="images2/shipping.jpg" alt="shipping" />
-        <h2>Print and Fill out Form and Attach to Shipment</h2>
-        <a
-          href="https://docs.google.com/document/d/1uH7jHGXX4Wnl1GF53j280R_f6b6gtPQnSx9gSCz3Aes/edit"
-          >Shipment Form</a
-        >
+        <h2 class="form1">Fill out Form/Print and Attach to Shipment</h2>
+        <a class="form2" href="ship_form.html">Shipment Form</a>
       </section>
 
       <footer>
