--- a/personal_web/faq.html
+++ b/personal_web/faq.html
@@ -33,37 +33,35 @@
         <img class="front1" src="images2/faq1.jpg" alt="faq" />
         <h1 class="front2">FAQ</h1>
       </section>
+      <h1 class="form4">Frequently Asked questions</h1>
       <section>
-        <h1>Frequently Asked questions</h1>
-      </section>
-      <section>
-        <h2>
+        <h2 class="faq">
           What makes Nifty Thrifty different from other online shopping
-          websites.
+          websites?
         </h2>
-        <p>
+        <p class="whatsell3">
           Not only do we provide an easy, user freindy constumer interface, we
           also allow the customer to get money for the clothes they donate. Most
           thrift stores are donation only, but we believe that the seller should
           recieve money for the items they give up and in return can use it to
           shop and buy new thrify items.
         </p>
-        <h2>How do you mail in clothes?</h2>
-        <p>
+        <h2 class="faq">How do you mail in clothes?</h2>
+        <p class="whatsell3">
           Clothes should be mailed in by any means as long as the shipping
           adresses are all correct. The clothes should be sent to the warehouse.
           Location: 266 W 3rd S Rexburg, ID. You can also bring your clothes or
           items into the store located at the same location to get your credit
           instantly.
         </p>
-        <h2>What's the average rate for items?</h2>
-        <p>
+        <h2 class="faq">What's the average rate for items?</h2>
+        <p class="whatsell3">
           Our team will assess the quality, style, and appearance of the clothes
           and give you an estimate of what your clothes are worth. No amount is
           set, it is all determined by our team.
         </p>
-        <h2>Does it cost for shipping?</h2>
-        <p>
+        <h2 class="faq">Does it cost for shipping?</h2>
+        <p class="whatsell3">
           Shipping is always free. To mail in your clothes there might be some
           shipping cost just for the package and to mail it in, but we will
           accomadate that with the credit you get back in stores.
