--- a/personal_web/contactus.html
+++ b/personal_web/contactus.html
@@ -30,15 +30,25 @@
         <img class="front1" src="images2/contact1.jpg" alt="contact" />
         <h1 class="front2">Contact Us</h1>
       </section>
-      <h1>
+      <h2 class="message">
         Email or call me with any questions or information about the website.
-      </h1>
-      <h1>Email: afleming9944@gmail.com</h1>
-      <h1>Phone: 623-302-8350</h1>
-      <h1>
+      </h2>
+      <h3 class="email">Email: afleming9944@gmail.com</h3>
+      <h3 class="phone">Phone: 623-302-8350</h3>
+      <h2 class="message">
         To contact company, leave a message and we'll get back to you shortly.
-      </h1>
-      <img src="images2/rsz_1smiley3.png" alt="smiley" />
+      </h2>
+      <form id="contact">
+        <label for="search">First Name</label><br />
+        <input type="text" name="name" value="" /><br />
+        <label for="search">Last Name</label><br />
+        <input type="text" name="name" value="" /><br />
+        <label for="search">Email</label><br />
+        <input type="text" name="email" value="" /><br />
+        <label for="search">Message</label><br />
+        <input type="text" name="message" value="" /><br />
+      </form>
+      <img class="smile" src="images2/rsz_1smiley3.png" alt="smiley" />
       <footer>
         <p>Nifty Thrifty &copy; 2022 - Ammon Fleming</p>
         <p><a href="site-plan.html">Site Plan</a></p>
