--- a/personal_web/etc.html
+++ b/personal_web/etc.html
@@ -38,7 +38,7 @@
       <section class="frontbuy">
         <form id="search2">
           <label for="search">Search Catagories</label><br />
-          <input type="text" name="search" value="" /><br />
+          <input type="text" name="search" value="Etc." /><br />
           <label for="search">Shirts</label><br />
           <input type="checkbox" name="shirts" value="" /><br />
           <label for="search">Pants</label><br />
