--- a/personal_web/contactus.html
+++ b/personal_web/contactus.html
@@ -13,12 +13,14 @@
         <a id="logo_link" href="home.html">
           <img class="logo" src="images2/my_logo.png" alt="logos" />
         </a>
-        <section>
-          <form id="search">
-            <label for="search">Search</label><br />
-            <input type="text" name="search" value="" /><br />
-          </form>
-        </section>
+        <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <form class="example" action="action_page.php">
+          <input type="text" placeholder="Search.." name="search" />
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
         <nav class="nav1">
           <a class="yeet" href="home.html">Home</a>
           <a class="yeet1" href="buy.html">Buy</a>
@@ -33,8 +35,24 @@
       <h2 class="message">
         Email or call me with any questions or information about the website.
       </h2>
-      <h3 class="email">Email: afleming9944@gmail.com</h3>
-      <h3 class="phone">Phone: 623-302-8350</h3>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img
+              src="images2/myface.jpg"
+              alt="Avatar"
+              style="width: 300px; height: 400px"
+            />
+          </div>
+          <div class="flip-card-back">
+            <h1>Ammon Fleming</h1>
+            <p>Major: Computer Science</p>
+            <p>My goal in life is to make shopping easier for everyone.</p>
+            <p>Email: afleming9944@gmail.com</p>
+            <p>Phone: 623-302-8350</p>
+          </div>
+        </div>
+      </div>
       <h2 class="message">
         To contact company, leave a message and we'll get back to you shortly.
       </h2>
