--- a/personal_web/home.html
+++ b/personal_web/home.html
@@ -17,12 +17,14 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-        <section>
-          <form id="search">
-            <label for="search">Search</label><br />
-            <input type="text" name="search" value="" /><br />
-          </form>
-        </section>
+        <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <form class="example" action="action_page.php">
+          <input type="text" placeholder="Search.." name="search" />
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
         <nav class="nav1">
           <a class="yeet" href="home.html">Home</a>
           <a class="yeet1" href="buy.html">Buy</a>
