--- a/personal_web/etc.html
+++ b/personal_web/etc.html
@@ -17,14 +17,14 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-      <form class="example" action="action_page.php">
-        <input type="text" placeholder="Search.." name="search" />
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
+        <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <form class="example" action="action_page.php">
+          <input type="text" placeholder="Search.." name="search" />
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
         <nav class="nav1">
           <a class="yeet" href="home.html">Home</a>
           <a class="yeet1" href="buy.html">Buy</a>
@@ -109,13 +109,21 @@
         <p><a href="faq.html">FAQ</a></p>
         <div class="social">
           <a href="https://facebook.com">
-            <img id="social2" src="images2/facebook2.png" alt="fb icon" />
+            <img class="social2" src="images2/facebook2.png" alt="fb icon" />
           </a>
           <a href="https://twitter.com">
-            <img id="social2" src="images2/twitter_1.png" alt="twitter icon" />
+            <img
+              class="social2"
+              src="images2/twitter_1.png"
+              alt="twitter icon"
+            />
           </a>
           <a href="https://instagram.com">
-            <img id="social2" src="images2/insta_logo2.png" alt="insta icon" />
+            <img
+              class="social2"
+              src="images2/insta_logo2.png"
+              alt="insta icon"
+            />
           </a>
         </div>
       </footer>
