--- a/personal_web/home.html
+++ b/personal_web/home.html
@@ -33,27 +33,23 @@
         </nav>
       </header>
       <section class="front">
-        <img
-          class="front1"
-          src="images2/rsz_thrift (1).jpg"
-          alt="front photo"
-        />
+        <img class="front1" src="images2/rsz_thrift(1).jpg" alt="front photo" />
         <h1 class="front2">Home</h1>
       </section>
       <h1 class="featureditems">Featured Items</h1>
       <section class="featured">
         <div>
-          <img class="photo1" src="images2/flannel (1).jpg" alt="shirt" />
+          <img class="photo1" src="images2/flannel(1).jpg" alt="shirt" />
           <p class="text1">H&M Premium Cotton Flannel. Mens, Large</p>
           <p class="text5">$4.50</p>
         </div>
         <div>
-          <img class="photo2" src="images2/rsz_pants (1).png" alt="pants" />
+          <img class="photo2" src="images2/rsz_pants(1).png" alt="pants" />
           <p class="text2">Vintage 1985 Cargo Style Pants. Mens, Medium</p>
           <p class="text6">$5.99</p>
         </div>
         <div>
-          <img class="photo3" src="images2/rsz_shoes (1).png" alt="shoes" />
+          <img class="photo3" src="images2/rsz_shoes(1).png" alt="shoes" />
           <p class="text3">Nike SB Dunks, Tan. Mens, Size 10</p>
           <p class="text6">$10.45</p>
         </div>
@@ -88,13 +84,21 @@
         <p class="footer2"><a href="faq.html">FAQ</a></p>
         <div class="social">
           <a href="https://facebook.com">
-            <img id="social2" src="images2/facebook2.png" alt="fb icon" />
+            <img class="social2" src="images2/facebook2.png" alt="fb icon" />
           </a>
           <a href="https://twitter.com">
-            <img id="social2" src="images2/twitter_1.png" alt="twitter icon" />
+            <img
+              class="social2"
+              src="images2/twitter_1.png"
+              alt="twitter icon"
+            />
           </a>
           <a href="https://instagram.com">
-            <img id="social2" src="images2/insta_logo2.png" alt="insta icon" />
+            <img
+              class="social2"
+              src="images2/insta_logo2.png"
+              alt="insta icon"
+            />
           </a>
         </div>
       </footer>
