--- a/personal_web/pants.html
+++ b/personal_web/pants.html
@@ -107,13 +107,21 @@
         <p><a href="faq.html">FAQ</a></p>
         <div class="social">
           <a href="https://facebook.com">
-            <img id="social2" src="images2/facebook2.png" alt="fb icon" />
+            <img class="social2" src="images2/facebook2.png" alt="fb icon" />
           </a>
           <a href="https://twitter.com">
-            <img id="social2" src="images2/twitter_1.png" alt="twitter icon" />
+            <img
+              class="social2"
+              src="images2/twitter_1.png"
+              alt="twitter icon"
+            />
           </a>
           <a href="https://instagram.com">
-            <img id="social2" src="images2/insta_logo2.png" alt="insta icon" />
+            <img
+              class="social2"
+              src="images2/insta_logo2.png"
+              alt="insta icon"
+            />
           </a>
         </div>
       </footer>
