--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="./wdd130/positioning.html">Positioning Practice</a></h2>
     <a href="./personal_web/site-plan.html"> Personal Site-Plan</a></h2>
     <a href="./personal_web/home.html">Personal Home Page</a>
+    <a href="finalwebreport.docx">Personal Website Report</a>
   </body>
 </html>
