--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="./personal_web/site-plan.html"> Personal Site-Plan</a></h2>
     <a href="./personal_web/home.html">Personal Home Page</a>
     <a href="finalwebreport.docx">Personal Website Report</a>
+    <a href="./practice/family.html">The Eternal Family</a>
   </body>
 </html>
