--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="./personal_web/home.html">Personal Home Page</a>
     <a href="finalwebreport.docx">Personal Website Report</a>
     <a href="./practice/family.html">The Eternal Family</a>
+    <a href="./colors.html">Ammon's Darker</a>
   </body>
 </html>
