--- a/wdd130/colors.html
+++ b/wdd130/colors.html
@@ -10,10 +10,12 @@
   <body>
     <div class="whole">
       <div class="half">
-        <h1>Sebastian</h1>
+        <a class="sebas" href="https://www.youtube.com/watch?v=tncR3HYYJbw"
+          >Sebastian</a
+        >
       </div>
       <div class="half2">
-        <h1>Ammon</h1>
+        <a class="ammon" href="https://youtu.be/Ux5cQbO_ybw">Ammon</a>
       </div>
       <img class="image1" src="clrsimg/image (2).png" alt="darker" />
       <img class="images2" src="clrsimg/image (3).png" alt="yeet" />
