--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <a href="./personal_web/home.html">Personal Home Page</a>
     <a href="finalwebreport.docx">Personal Website Report</a>
     <a href="./practice/family.html">The Eternal Family</a>
-    <a href="./wdd130/colors.html">Ammon's Darker</a>
+    <a href="./practice/colors.html">Ammon's Darker</a>
   </body>
 </html>
